# HeatTransferFVM

./: .gitignore  CMakeLists.txt  compare_non_orth.sh  comparison_results.txt~  out_init.plt  out_steady.plt  run_comparison.sh  unstructMesh.pw  对比测试总结.md  非正交修正对比测试结果.md  非正交修正测试结果.md
include/: FVMDiscrete.hpp  FaceField.hpp  Field.hpp  FiniteVolume.hpp  Mesh.hpp  Point3D.hpp  PostProcessor.hpp  Properties.hpp  Solver.hpp  SpaceMatrix.hpp  SurfaceField.hpp  Tensor3D.hpp  fvMatrix.hpp
polyMesh/: boundary  faces  neighbour  owner  points
src/: FiniteVolume.cpp  Solver.cpp  Steady.cpp  Transient.cpp  main.cpp  out_init.plt
trash/: FiniteVolume.cpp  FiniteVolume.tpp  Solver.cpp  Solver.tpp
